--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ body{
     border: none;
     background-color: hsl(0, 0%, 20%);
     color: aliceblue;
+    box-sizing: border-box;
 }
 
 
 #container{
-    font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 15%);
     border-radius: 15px;
     max-width: 500px;
